[gd_scene load_steps=3 format=3 uid="uid://bxxwuipqewjrb"]

[ext_resource type="Script" path="res://Scripts/volumes.gd" id="1_u1gtg"]
[ext_resource type="FontFile" uid="uid://cljjgf2p13ikp" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="2_adrrp"]

[node name="Volumes" type="VBoxContainer"]
offset_right = 191.0
offset_bottom = 176.0
script = ExtResource("1_u1gtg")

[node name="MasterVolume" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_adrrp")
theme_override_font_sizes/font_size = 26
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="."]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="SFXVolume" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_adrrp")
theme_override_font_sizes/font_size = 26
text = "Effects"

[node name="SFXVolumeSlider" type="HSlider" parent="."]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="MusicVolume" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_adrrp")
theme_override_font_sizes/font_size = 26
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="."]
layout_mode = 2
max_value = 1.0
step = 0.05

[connection signal="value_changed" from="MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
